# single_line_reader

./: .gitignore  Cargo.toml
src/: app.rs  cache.rs  chapter.rs  color_picker.rs  config.rs  history.rs  main.rs  regex_config.rs  state.rs  todo.txt  tray.rs
src/parser/: docx.rs  epub.rs  mod.rs  txt.rs
