[package]
name = "single_line_reader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
epub = "2"
docx-rs = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
]}

[[bin]]
name = "single_line_reader"
path = "src/main.rs"